style simplification and scaling fixes
- more aptly named CSS classes
- restructured header styling
- simplified shared CSS attribute assignments
- added min-width to pictures
- fixed hover links: all links can't spill onto another line

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /*border: 1px solid black;*/
 }
 
 html {
@@ -16,20 +15,14 @@ header, footer  {
 }
 
 header {
-  padding: 10px 0px;
+  padding-bottom: 20px;
 }
 
-.content, .tier h2, hr, .achiev, .exp, header .inline-mid {
-  min-width: 200px;
+.content, .tier h2, hr, .achiev, .exp, .tier img { /* everything that spans the page */
+  min-width: 600px;                                /* needs to behave similarly      */
 }
 
-.content {
-  font-family: "Open Sans";
-  padding: 2% 1.5%;
-  font-size: 1.2em;
-}
-
-.content, .tier h2, hr, .achiev, .exp {
+.content, .tier h2, hr, .achiev, .exp { /* everything except images sould behave similarly */
   max-width: 1000px;
   margin: auto;
 }
@@ -45,14 +38,11 @@ header {
   vertical-align: middle;
 }
 
-header .inline-mid {
-  max-width: 500px;
+.greeting {
+  width: 500px;
+  height: 100%;
   padding: .8em;
-}
-
-header a:active, footer a:active {
-  position: relative;
-  top: 1px;
+  font-size: 2em;
 }
 
 .face {
@@ -61,57 +51,16 @@ header a:active, footer a:active {
   border-radius: 100%;
 }
 
-.greeting {
-  font-size: 3.5em;
-  margin-left: 4%;
-}
-
-header .content {
-  max-width: 750px;
-  padding: 1% 0% 1% 3%;
-}
-
-a {
-  text-decoration: none;
-  position: relative;
-  font-size: inherit;
-  color: inherit;
-}
-
-header a {
-  transition: .5s;
-  -moz-transition: .5s;
-  -webkit-transition: .5s;
-  margin: 0px 5px;
-  padding: .7em;
-  border: 1px solid rgba(245, 245, 245, .4);
+.nav {
   font-size: 1em;
 }
 
-header a:hover {
-  background-color: white;
-  color: DarkSlateGray;
-  transition: .5s;
-  -moz-transition: .5s;
-  -webkit-transition: .5s;
-}
-
-.content a {
-  color: DarkCyan;
-}
-
-.content a:after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0%;
-  border-bottom: 2px solid DarkCyan;
-  transition: 0.4s;
-}
-
-.content a:hover:after {
-  width: 100%;
+.intro {
+  font-family: "Open Sans";
+  font-size: 1.2em;
+  max-width: 750px;
+  padding: 0% 0% 1.5% 3%;
+  margin: auto;
 }
 
 .tier { /* tiers make up the three main site categories: experience, achievements, and resume */
@@ -132,6 +81,12 @@ header a:hover {
   font-size: 2.25em;
 }
 
+.content { /* elaboration under main tier headings */
+  font-family: "Open Sans";
+  padding: 2% 1.5%;
+  font-size: 1.2em;
+}
+
 .exp { /* experience section sub-heading */
   font-size: 1.7em;
   padding: 2% 0%;
@@ -142,26 +97,72 @@ header a:hover {
   padding: 1% 0%;
 }
 
-footer ul {
-  font-size: 1em;
-  padding: 1.5% 0%;
+footer {
+  height: 70px;
 }
 
-footer li {
+.contact {
+  line-height: 70px;
+}
+
+footer .contact div {
+  font-size: 1.1em;
   padding: 0% .4%;
 }
 
+a {
+  white-space: nowrap;
+  text-decoration: none;
+  position: relative;
+  font-size: inherit;
+  color: inherit;
+}
+
+header a {
+  transition: .5s;
+  -moz-transition: .5s;
+  -webkit-transition: .5s;
+  margin: 0px 5px;
+  padding: .7em;
+  border: 1px solid rgba(245, 245, 245, .4);
+  font-size: 1em;
+}
+
 footer a {
+  line-height: 1.5em;
+}
+
+header a:hover {
+  background-color: white;
+  color: DarkSlateGray;
   transition: .5s;
   -moz-transition: .5s;
   -webkit-transition: .5s;
 }
 
-footer a:hover {
-  color: #E0E0E0;
-  transition: .5s;
-  -moz-transition: .5s;
-  -webkit-transition: .5s;
+.content a {
+  color: DarkCyan;
+}
+
+.content a:after {
+  border-bottom: 1px solid DarkCyan;
+}
+
+footer a:after {
+  border-bottom: 1px solid white;
+}
+
+footer a:after, .content a:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  transition: 0.4s;
+}
+
+footer a:hover:after, .content a:hover:after {
+  width: 100%;
 }
 
 @font-face {
